==> RT-Thread/rt-thread/bsp/apm32/libraries/Drivers/drv_timer.c <==
#include <board.h>
#define DBG_TAG               "drv.clock_timer"
#define DBG_LVL               DBG_INFO
#include <rtdbg.h>

static int rt_hw_clock_timer_init(void)
{
    int i = 0;
    int result = RT_EOK;

    for (i = 0; i < sizeof(tmr_config) / sizeof(tmr_config[0]); i++)
    {
        tmr_config[i].device.info = &apm32_timer_info;
        tmr_config[i].device.ops  = &apm32_clock_timer_ops;
        if (rt_clock_timer_register(&tmr_config[i].device, tmr_config[i].name, &tmr_config[i]) == RT_EOK)
        {
            LOG_D("%s register success", tmr_config[i].name);
        }
        else
        {
            LOG_E("%s register failed", tmr_config[i].name);
            result = -RT_ERROR;
        }
    }

    return result;
}
