==> RT-Thread/rt-thread/bsp/at32/libraries/rt_drivers/drv_timer.c <==
#include "board.h"
#include "drv_timer.h"
#define LOG_TAG             "drv.clock_timer"
#include <drv_log.h>

static int rt_hw_clock_timer_init(void)
{
    int i = 0;
    int result = RT_EOK;

    for (i = 0; i < sizeof(at32_clock_timer_obj) / sizeof(at32_clock_timer_obj[0]); i++)
    {
        at32_clock_timer_obj[i].tmr_device.info = &_info;
        at32_clock_timer_obj[i].tmr_device.ops  = &_ops;
        if (rt_clock_timer_register(&at32_clock_timer_obj[i].tmr_device, at32_clock_timer_obj[i].name, at32_clock_timer_obj[i].tmr_x) == RT_EOK)
        {
            LOG_D("%s register success", at32_clock_timer_obj[i].name);
        }
        else
        {
            LOG_E("%s register failed", at32_clock_timer_obj[i].name);
            result = -RT_ERROR;
        }
    }

    return result;
}
